--- a/teladelogin.html
+++ b/teladelogin.html
@@ -10,15 +10,15 @@
     #div1 {
         width: 400px;
         height: 400px;
-        background-color: rgb(44, 44, 95);
+        background-color: rgb(44, 95, 65);
         margin: auto;
         margin-top: 300px;
         padding: 5px;
-        border: 1px;
+        border: 2px;
         border-radius: 7px;
     }
 </style>
-<body background="pizza6.jpg" style="text-align: center;">
+<body background="pizza.avif" style="text-align: center;">
   <div id="div1">
     <h1 style="color: rgba(255, 255, 255, 0.925);">Pizzaria Latitude Zero</h1>
     <p></p>
